jena-owl2: add `UnionGraph.Listener` & `UnionGraph.EventManager`, `Graphs#isOntUnionGraph`; other minor changes